--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
     "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   },
   "dependencies": {
@@ -25,11 +26,11 @@
     "@mikro-orm/postgresql": "^4.4.4",
     "apollo-server-express": "^2.21.0",
     "argon2": "^0.27.1",
+    "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
